    charmap to UTF-8; the installer internally always uses the locale C.UTF-8.

  [ Anton Zinoviev]
  * config file: document that Goha and GohaClassic are available only
    with CODESET=Ethiopian.
  * When repairing errors in the config file cause by previous versions do
    not ask unconditionaly the layout/variant questions if there are
    values in the configuration file.

 -- Frans Pop <fjp@debian.org>  Wed, 18 Nov 2009 14:58:54 +0100

console-setup (1.47) unstable; urgency=low

  * Separate the keyboard configuration in a new package
    keyboard-configuration.  No font configuration in console-setup-mini
    and console-setup-udeb.  Thanks to Celejar, Luís Picciochi Oliveira,
    Francesco Poli and Bill Brelsford.  
    Closes: #542003, #548837, #546983, #548262, #536600, #536614.
  * Use CONSOLE_MAP configuration variable instead of ACM (to be the same
    as kbd).
  * Use Uni2 instead of Uni1 when no good default codeset can be detected.
    Its better to have one more fully supported language (Greek) than two
    unsupported right to left languages (Arabic and Hebrew).
  * Configuration variable KMAP for personnal keymaps.  Thanks to Samuel
    Thibault, closes: #546740.

 -- Anton Zinoviev <zinoviev@debian.org>  Fri, 13 Nov 2009 18:03:11 +0200

console-setup (1.46) unstable; urgency=low

  [ Christian Perrier ]
  * Add kbd to Should-Start in init script. Thanks to Michael Schutte
    for the patch. Closes: #548101

  [ Colin Watson ]
  * Add default codeset/layout/variant for Asturian.
  * Forbid Unicode keysyms in the range 0xf000-0xffff, as kbd 1.15-1 rejects
    the entire keymap if it contains any keysyms in that range (LP:
    #416949).

  [ Jordi Mallach ]
  * Set XKBVARIANT to "cat" for Catalan.

  [ Anton Zinoviev]
  * Protect the special symbols in the regular expressions of ask_debconf.
    Thanks to Tibor Zenis, Rogério Brito, Michael Gold, W. Goesgens, Martin
    Ziegler, Andreas Juch, Colin Tuckley, Samuel Thibault and Arnaud Giersch.  