@@ -109,7 +109,6 @@ install-mini: build
 		usr/share/consolefonts
 	dh_install -pconsole-setup-mini Fonts/Vietnamese-Fixed16.psf \
 		usr/share/consolefonts
-	dh_install -pconsole-setup-mini debian/kbdnames.gz usr/share/console-setup-mini
 	dh_install -pconsole-setup-mini Keyboard/ckbcomp-mini usr/bin
 	dh_link -pconsole-setup-mini usr/bin/ckbcomp-mini usr/bin/ckbcomp
 	dh_install -pconsole-setup-mini setupcon bin
@@ -256,8 +255,8 @@ binary-indep: build install
 	dh_compress
 	dh_fixperms
 	dh_installdeb
-	$(pre) --mini debian/keyboard-configuration/DEBIAN/config
-	$(pre) --mini debian/keyboard-configuration/DEBIAN/postinst
+	$(pre) debian/keyboard-configuration/DEBIAN/config
+	$(pre) debian/keyboard-configuration/DEBIAN/postinst
 	$(pre) debian/console-setup/DEBIAN/config
 	$(pre) debian/console-setup/DEBIAN/postinst
 	$(pre) --mini debian/console-setup-udeb/DEBIAN/postinst
