@@ -153,8 +153,6 @@ fi
 ACTIVE_CONSOLES=${ACTIVE_CONSOLES:-/dev/tty[1-6]}
 CHARMAP=${CHARMAP:-UTF-8}
 CODESET=${CODESET:-Uni2}
-FONTFACE=${FONTFACE:-Fixed}
-FONTSIZE=${FONTSIZE:-16}
 CONSOLE_MAP=${CONSOLE_MAP:-$ACM}
 
 #-----------------------#
