@@ -10,6 +10,14 @@ console-setup (1.48) UNRELEASED; urgency=low
   * When repairing errors in the config file cause by previous versions do
     not ask unconditionaly the layout/variant questions if there are
     values in the configuration file.
+  * Do not install kbdnames.gz in console-setup-mini but only in the
+    udeb.
+  * keyboard-configuration(config): do not give --mini option to the
+    preprocessor.  This returns back the keyboard model names in the
+    file.  Thanks to Mario 'BitKoenig' Holbe, closes: #557001.
+  * setupcon: Do not overwrite empty FONTFACE and FONTSIZE (I had
+    forgotten that setupcon supported this mode of operation).  Thanks to
+    Josh Triplett, closes: #556882.
 
  -- Frans Pop <fjp@debian.org>  Wed, 18 Nov 2009 14:58:54 +0100
 
